--- a/.isort.cfg
+++ b/.isort.cfg
@@ -4,5 +4,5 @@ include_trailing_comma=True
 force_grid_wrap=0
 use_parentheses=True
 line_length=88
-known_third_party = numpy,torch,unityagents
-known_first_party = navigation
+known_third_party = 
+known_first_party = ccontrol
